# Rust-2025-2026

./: .gitignore  README.md
Lab001/src/: main.rs
lab02/src/: main.rs
lab03/src/: main.rs
lab04/src/: main.rs
lab05/: Cargo.toml  students_json.txt
lab05/src/: main.rs
lab06/: commands.txt
lab06/src/: main.rs
lab07/src/: main.rs
labtest/: Cargo.toml
project/: .gitignore  Cargo.toml  README.md
project/crates/server/: Cargo.toml
project/crates/server/src/: app.rs  main.rs
project/crates/server/src/net/: ws.rs
project/crates/server/src/room/: actor.rs  manager.rs
project/crates/shared/: Cargo.toml
project/crates/shared/src/: ai.rs  hex.rs  lib.rs  net.rs  rules.rs  types.rs
project/docs/: protocol.md  rules.md
project/scripts/: run_client.sh  run_server.sh
